--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,21 @@
 services:
   api:
     build:
+      dockerfile: Dockerfile
       context: .
-      dockerfile: Dockerfile    
-    environment:
-      - DB_HOSTNAME=db
-      - DB_INITIAL_POOL_SIZE=30
-      - DB_MAX_POOL_SIZE=30
-      - PORT=3000
-    ports:
-      - "3000:3000"
+      # Only will build development stage from our dockerfile
+      target: development
     volumes:
-      - ./:/usr/src/app
-      - /usr/src/app/node_modules
-    depends_on:
-      - db
+      - .:/usr/src/app
+    env_file:
+    - .env
+    # Run a command against the development stage of the image
+    ports:
+      - 3000:3000
+    command:
+      - '/bin/sh'
+      - '-c'
+      - '/bin/sleep 10 && npm run start:dev'
 
   db:
     image: postgres:latest
@@ -26,7 +27,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - ./pgdata:/var/lib/postgresql/data:z
 
   rabbitmq-management:
     image: ${IMAGES_PREFIX:-}rabbitmq:management
@@ -37,7 +38,5 @@ services:
     volumes:
       - ./rbmqdata:/var/lib/rabbitmq
     ports:
-      - target: 15672
-        published: ${RABBITMQ_MANAGEMENT_PORT:-15672}
-        protocol: tcp
+      - "15672:15672"
 
