--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@golevelup/nestjs-rabbitmq": "^5.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.3.5",
     "@nestjs/platform-express": "^10.0.0",
-    "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -33,6 +34,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/amqplib": "^0.10.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
