--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,10 +21,8 @@ services:
   db:
     image: postgres:latest
     hostname: db
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-admin}
-      - POSTGRES_USER=${POSTGRES_USER:-admin}
-      - POSTGRES_DB=${POSTGRES_DB:-app}
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     volumes:
