--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/microservices": "^10.3.5",
     "@nestjs/platform-express": "^10.0.0",
     "amqplib": "^0.10.3",
+    "drizzle-orm": "^0.30.5",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -38,9 +40,11 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/pg": "^8.11.4",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
