--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-	"migrate": "docker compose exec -it api bash -c \"npx tsx ./drizzle/migrate.ts\""
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+	"drizzle:seed": "docker compose exec -it api bash -c \"npx tsx ./drizzle/seeds/index.ts\"",
+	"generate": "docker compose exec -it api bash -c \"npx drizzle-kit generate:pg\"",
+	"migrate": "docker compose exec -it api bash -c \"npx drizzle-kit push:pg\""
   },
   "dependencies": {
     "@golevelup/nestjs-rabbitmq": "^5.1.0",
