--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/microservices": "^10.3.5",
     "@nestjs/platform-express": "^10.0.0",
     "amqplib": "^0.10.3",
+    "axios": "^1.6.8",
     "drizzle-orm": "^0.30.5",
     "drizzle-zod": "^0.5.1",
     "pg": "^8.11.3",
